--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </div>
 
       
-
+<div class="columns">
         <div class="content-1">
          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat distinctio animi magnam. Placeat temporibus, at fuga modi rerum consectetur deleniti laborum laboriosam eum adipisci aliquid praesentium, eos tempore est maiores!
         
@@ -52,5 +52,6 @@
             <li>The Big Bang Theory</li>
          </ul>
         </div>
+    </div>       
     </body>
     </html
